discussion/kv_engine/154545/154545_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38476: wip

Need to fix the shared_ptr vs weak_ptr in the registry/ownership
stuff.

Change-Id: I81db06c75f63e8c0f56f410fc24c716549bbabc6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-27 20:05:41.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 20:35:28.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9246/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:120:22: warning: use "= default" to define a trivial destructor [modernize-use-equals-default]
BucketLoggerWrapper::~BucketLoggerWrapper() {
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9246/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9246/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30884/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7823/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36164/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10947/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9871/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10803/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11209/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18775/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
